// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildStageSpecifications tests clicking on description shows corresponding inputs 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Stage Details
              </p>
            </div>
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group fields"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Stage Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            placeholder="Enter your stage name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="addDataLinks"
                  />
                </div>
                <div
                  class="fields"
                >
                  <span
                    class="removeLink"
                  >
                    remove
                  </span>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="description"
                    >
                      Description
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        name="description"
                      />
                    </div>
                  </div>
                </div>
                <label
                  class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Clone Codebase
                </label>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Shared Paths
              </p>
            </div>
            <form
              class="FormikForm--main fields"
            >
              <div>
                <div
                  class="group withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="sharedPaths[0].value-0"
                    style="flex-grow: 1; margin-bottom: 0px;"
                  >
                    <label
                      class="bp3-label"
                      for="sharedPaths"
                    >
                      <div
                        class="formLabel"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                          style="display: flex; align-items: center;"
                        >
                          Shared Paths
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="question"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                  >
                                    <path
                                      d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                                      fill="#9AA5B5"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </p>
                        <div
                          class="bp3-popover-wrapper typeSelectorWrapper"
                        >
                          <div
                            class="bp3-popover-target typeSelector"
                          >
                            <button
                              class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main btn"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                <span
                                  class="bp3-icon StyledProps--main icon fixed"
                                  data-icon="fixed-input"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 9 9"
                                    width="12"
                                  >
                                    <path
                                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="btnText"
                                >
                                  Fixed value
                                </span>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-card bp3-elevation-0 Card--card"
                        style="width: 100%;"
                      >
                        <div
                          class="group withoutAligning"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="sharedPaths[0].value-1"
                            style="flex-grow: 1;"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    class="bp3-input"
                                    name="sharedPaths[0].value"
                                    type="text"
                                    value=""
                                  />
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="fixed-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 9 9"
                                          width="12"
                                        >
                                          <path
                                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                            data-testid="remove-sharedPaths-[0]"
                            style="margin-top: 4px;"
                            type="button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="main-trash"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 11 14"
                                width="20"
                              >
                                <path
                                  d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                                  fill="#4d5969"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                        <button
                          class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                          data-testid="add-sharedPaths"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            + Add
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Variables
              </p>
            </div>
            <form
              class="FormikForm--main"
            >
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main addVariable StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Add Variable
                  </span>
                </button>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Skip Conditions
              </p>
            </div>
            <form
              class="FormikForm--main"
              style="width: 300px;"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="skipCondition-0"
                >
                  <label
                    class="bp3-label"
                    for="skipCondition"
                  >
                    If the JEXL condition evaluates to true, skip this step
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            class="bp3-input"
                            name="skipCondition"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-small"
                  style="white-space: break-spaces;"
                >
                  In the JEXL expression, you could use any of the pipeline variables - including the output of any previous steps.

Examples:
&lt;+steps.step1.output.result&gt; == “success”
&lt;+environment.name&gt; != “QA”

                  <br />
                  <a
                    class="bp3-button StyledProps--font Button--button Button--link StyledProps--main StyledProps--font-small"
                    href="javascript:void()"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Learn more
                    </span>
                  </a>
                </p>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildStageSpecifications tests renders correctly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Stage Details
              </p>
            </div>
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group fields"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Stage Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            placeholder="Enter your stage name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="addDataLinks"
                  >
                    <button
                      class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                        icon="plus"
                      >
                        <svg
                          data-icon="plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            plus
                          </desc>
                          <path
                            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        description
                      </span>
                    </button>
                  </div>
                </div>
                
                <label
                  class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Clone Codebase
                </label>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Shared Paths
              </p>
            </div>
            <form
              class="FormikForm--main fields"
            >
              <div>
                <div
                  class="group withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="sharedPaths[0].value-0"
                    style="flex-grow: 1; margin-bottom: 0px;"
                  >
                    <label
                      class="bp3-label"
                      for="sharedPaths"
                    >
                      <div
                        class="formLabel"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                          style="display: flex; align-items: center;"
                        >
                          Shared Paths
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="question"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                  >
                                    <path
                                      d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                                      fill="#9AA5B5"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </p>
                        <div
                          class="bp3-popover-wrapper typeSelectorWrapper"
                        >
                          <div
                            class="bp3-popover-target typeSelector"
                          >
                            <button
                              class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main btn"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                <span
                                  class="bp3-icon StyledProps--main icon fixed"
                                  data-icon="fixed-input"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 9 9"
                                    width="12"
                                  >
                                    <path
                                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="btnText"
                                >
                                  Fixed value
                                </span>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-card bp3-elevation-0 Card--card"
                        style="width: 100%;"
                      >
                        <div
                          class="group withoutAligning"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="sharedPaths[0].value-1"
                            style="flex-grow: 1;"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    class="bp3-input"
                                    name="sharedPaths[0].value"
                                    type="text"
                                    value=""
                                  />
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="fixed-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 9 9"
                                          width="12"
                                        >
                                          <path
                                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                            data-testid="remove-sharedPaths-[0]"
                            style="margin-top: 4px;"
                            type="button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="main-trash"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 11 14"
                                width="20"
                              >
                                <path
                                  d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                                  fill="#4d5969"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                        <button
                          class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                          data-testid="add-sharedPaths"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            + Add
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Variables
              </p>
            </div>
            <form
              class="FormikForm--main"
            >
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main addVariable StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Add Variable
                  </span>
                </button>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout--vertical StyledProps--main specTabs StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
              >
                Skip Conditions
              </p>
            </div>
            <form
              class="FormikForm--main"
              style="width: 300px;"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="skipCondition-0"
                >
                  <label
                    class="bp3-label"
                    for="skipCondition"
                  >
                    If the JEXL condition evaluates to true, skip this step
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            class="bp3-input"
                            name="skipCondition"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-small"
                  style="white-space: break-spaces;"
                >
                  In the JEXL expression, you could use any of the pipeline variables - including the output of any previous steps.

Examples:
&lt;+steps.step1.output.result&gt; == “success”
&lt;+environment.name&gt; != “QA”

                  <br />
                  <a
                    class="bp3-button StyledProps--font Button--button Button--link StyledProps--main StyledProps--font-small"
                    href="javascript:void()"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Learn more
                    </span>
                  </a>
                </p>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
